Do less copying / zipping for Helix - use .dotnet/ folders instead of App.Ref/App.Runtime packages for dotnet-cli layouts   - no need to unzip files into another layout   - fail fast or emit message when layouts don't exist - set `$(TestDependsOnAspNetPackages)` to `false` by default   - no need to copy all packages into publish/ folders of most test projects     - upload very few times per queue (2 today, maybe 4 in the future), not for _every_ work item     - reduce the size of most work item payloads, saving bandwidth and time     - reduction should not cause problems, even around major version and TFM changes (see .dotnet/ folders)   - add `$(TestDependsOnAspNetAppPackages)` for the App.UnitTests case; just 2 packages needed there - get App.UnitTests working in local builds   - grab RuntimeList.xml file from App.Runtime's obj/ folder   - find needed packages whether running locally or on Helix agents; should always exist
nits:
- remove test infrastructure we don't need anymore
  - use one property for shared Fx and targeting pack versions; always the same
  - remove `$env:ASPNET_RUNTIME_PATH`
- rename silly ...ListListsContains... tests
- remove extra `$(TestDependsOnAspNetXyz)` settings to their new default values
- add more comments

--- a/eng/targets/Helix.props
+++ b/eng/targets/Helix.props
@@ -14,8 +14,12 @@
     <LoggingTestingDisableFileLogging Condition="'$(IsHelixJob)' == 'true'">false</LoggingTestingDisableFileLogging>
     <NodeVersion>16.11.0</NodeVersion>
 
-    <!-- Have all tests depend on the latest runtimes until we get a net7.0 SDK -->
-    <TestDependsOnAspNetPackages>true</TestDependsOnAspNetPackages>
+    <!--
+      Many tests depend on the .dotnet/ layouts but only a few (those that restore or test packages) require
+      packages. This should be sufficient for most test projects even as we switch to new major versions or TFMs.
+    -->
+    <TestDependsOnAspNetPackages>false</TestDependsOnAspNetPackages>
+    <TestDependsOnAspNetAppPackages>false</TestDependsOnAspNetAppPackages>
     <TestDependsOnAspNetRuntime>true</TestDependsOnAspNetRuntime>
   </PropertyGroup>
 
