--- a/src/Framework/test/Microsoft.AspNetCore.App.UnitTests.csproj
+++ b/src/Framework/test/Microsoft.AspNetCore.App.UnitTests.csproj
@@ -1,14 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>$(DefaultNetCoreTargetFramework)</TargetFramework>
     <RootNamespace>Microsoft.AspNetCore</RootNamespace>
     <VerifyAncmBinary Condition="'$(TargetOsName)' == 'win' AND '$(TargetArchitecture)' != 'arm'">true</VerifyAncmBinary>
-    <TestDependsOnAspNetPackages>true</TestDependsOnAspNetPackages>
+    <TestDependsOnAspNetAppPackages>true</TestDependsOnAspNetAppPackages>
     <SkipHelixArm>true</SkipHelixArm>
   </PropertyGroup>
 
   <ItemGroup>
+    <!-- Grab RuntimeList.xml because it's not placed in the .dotnet/ folder. -->
+    <None Include="$(ArtifactsObjDir)Microsoft.AspNetCore.App.Runtime\RuntimeList.xml"
+        CopyToOutputDirectory="PreserveNewest" />
+
     <!-- Ignore aspnetcorev2_inprocess because tests expect only managed assemblies in this item group. -->
     <_SharedFrameworkBinariesFromRepo Include="@(AspNetCoreAppReference);@(AspNetCoreAppReferenceAndPackage)" />
 
@@ -48,16 +51,12 @@
       <_Parameter2>@(_ExpectedSharedFrameworkBinaries)</_Parameter2>
     </AssemblyAttribute>
     <AssemblyAttribute Include="Microsoft.AspNetCore.TestData">
-      <_Parameter1>SharedFrameworkLayoutRoot</_Parameter1>
-      <_Parameter2>$(SharedFrameworkLayoutRoot)</_Parameter2>
-    </AssemblyAttribute>
-    <AssemblyAttribute Include="Microsoft.AspNetCore.TestData">
-      <_Parameter1>TargetingPackLayoutRoot</_Parameter1>
-      <_Parameter2>$(TargetingPackLayoutRoot)</_Parameter2>
-    </AssemblyAttribute>
-    <AssemblyAttribute Include="Microsoft.AspNetCore.TestData">
       <_Parameter1>VerifyAncmBinary</_Parameter1>
       <_Parameter2>$(VerifyAncmBinary)</_Parameter2>
+    </AssemblyAttribute>
+    <AssemblyAttribute Include="Microsoft.AspNetCore.TestData">
+      <_Parameter1>PackagesFolder</_Parameter1>
+      <_Parameter2>$(ArtifactsShippingPackagesDir)</_Parameter2>
     </AssemblyAttribute>
   </ItemGroup>
 
@@ -112,17 +111,6 @@
         <_Parameter1>RepositoryCommit</_Parameter1>
         <_Parameter2>$(SourceRevisionId)</_Parameter2>
       </AssemblyAttribute>
-
-      <AssemblyAttribute Include="Microsoft.AspNetCore.TestData">
-        <_Parameter1>RuntimePackageVersion</_Parameter1>
-        <_Parameter2>$(SharedFxVersion)</_Parameter2>
-      </AssemblyAttribute>
-
-      <AssemblyAttribute Include="Microsoft.AspNetCore.TestData">
-        <_Parameter1>TargetingPackVersion</_Parameter1>
-        <_Parameter2>$(TargetingPackVersion)</_Parameter2>
-      </AssemblyAttribute>
     </ItemGroup>
   </Target>
-
 </Project>
