Pass suppression file

--- a/eng/sdl-tsa-vars.config
+++ b/eng/sdl-tsa-vars.config
@@ -10,3 +10,4 @@
 -TsaOnboard $True
 -TsaPublish $True
 -PoliCheckAdditionalRunConfigParams @("UserExclusionPath < $(Build.SourcesDirectory)/s/eng/PoliCheckExclusions.xml")
+-CrScanAdditionalRunConfigParams @("SuppressionFile < $(Build.SourcesDirectory)/s/CredScanSuppressions.json")
