Disable component governance in Linux_musl_x64_build

--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -520,6 +520,7 @@ stages:
         $(_PublishArgs)
         $(_InternalRuntimeDownloadArgs)
       installNodeJs: false
+      disableComponentGovernance: true
       skipComponentGovernanceDetection: true
       artifacts:
       - name: Linux_musl_x64_Logs
