--- a/src/Servers/IIS/Directory.Build.props
+++ b/src/Servers/IIS/Directory.Build.props
@@ -5,5 +5,6 @@
     <BundledNETCoreAppPackageVersion></BundledNETCoreAppPackageVersion>
     <KestrelSharedSourceRoot>$(MSBuildThisFileDirectory)..\Kestrel\shared\</KestrelSharedSourceRoot>
     <LibNetHostPath>$(NetCoreTargetingPackRoot)\Microsoft.NETCore.App.Host.win-$(Platform)\$(AppHostPackVersion)\runtimes\win-$(Platform)\native</LibNetHostPath>
+    <PlatformToolsetVersion>v142</PlatformToolsetVersion>
   </PropertyGroup>
 </Project>
