--- a/src/Servers/IIS/Directory.Build.props
+++ b/src/Servers/IIS/Directory.Build.props
@@ -5,6 +5,7 @@
     <BundledNETCoreAppPackageVersion></BundledNETCoreAppPackageVersion>
     <KestrelSharedSourceRoot>$(MSBuildThisFileDirectory)..\Kestrel\shared\</KestrelSharedSourceRoot>
     <LibNetHostPath>$(NetCoreTargetingPackRoot)\Microsoft.NETCore.App.Host.win-$(Platform)\$(AppHostPackVersion)\runtimes\win-$(Platform)\native</LibNetHostPath>
+    <!-- This tools version MUST match the same version as runtime uses to compile libnethost.lib -->
     <PlatformToolsetVersion>v142</PlatformToolsetVersion>
   </PropertyGroup>
 </Project>
