Extend disable component governance for linux (#39925)
Extension of https://github.com/dotnet/aspnetcore/pull/39898

--- a/.azure/pipelines/jobs/default-build.yml
+++ b/.azure/pipelines/jobs/default-build.yml
@@ -132,6 +132,8 @@ jobs:
           demands: ImageOverride -equals Build.Server.Amd64.VS2019
     ${{ if ne(parameters.container, '') }}:
       container: ${{ parameters.container }}
+    ${{ if ne(parameters.disableComponentGovernance, '') }}:
+      disableComponentGovernance: ${{ parameters.disableComponentGovernance }}
     variables:
     - AgentOsName: ${{ parameters.agentOs }}
     - ASPNETCORE_TEST_LOG_MAXPATH: "200" # Keep test log file name length low enough for artifact zipping
