Add nullable annotations to Identity.Extensions

--- a/src/Identity/EntityFrameworkCore/src/Microsoft.AspNetCore.Identity.EntityFrameworkCore.csproj
+++ b/src/Identity/EntityFrameworkCore/src/Microsoft.AspNetCore.Identity.EntityFrameworkCore.csproj
@@ -5,7 +5,8 @@
     <TargetFramework>$(DefaultNetCoreTargetFramework)</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PackageTags>aspnetcore;entityframeworkcore;identity;membership</PackageTags>
-    <Nullable>disable</Nullable>
+    <NoWarn>$(NoWarn);RS0036</NoWarn>
+
   </PropertyGroup>
 
   <ItemGroup>
